<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10px">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_nG" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_infNUMB" />

    <EditText
        android:id="@+id/phoneGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_nG"
        android:inputType="phone"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_nS" />

    <EditText
        android:id="@+id/phoneSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_nS"
        android:inputType="phone"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_t" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_infSMS" />

    <EditText
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/_t"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/_Set" />

    <Button
        android:id="@+id/stop_foreground_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TEST"/>

</LinearLayout>